--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <modules>
         <module>my-web-mvc</module>
         <module>user-web</module>
+        <module>my-configuration</module>
+        <module>my-dependency-injection</module>
     </modules>
 
     <properties>
@@ -51,7 +53,25 @@
     <!-- Artifacts 依赖版本管理 -->
     <dependencyManagement>
 
+
         <dependencies>
+
+            <dependency>
+                <groupId>org.geekbang.projects</groupId>
+                <artifactId>my-web-mvc</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.geekbang.projects</groupId>
+                <artifactId>my-dependency-injection</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.geekbang.projects</groupId>
+                <artifactId>my-configuration</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
             <!-- Servlet 3.1 API -->
             <dependency>
                 <groupId>javax.servlet</groupId>
