--- a/user-web/src/main/webapp/WEB-INF/web.xml
+++ b/user-web/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,12 @@
          http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          metadata-complete="false" version="3.0">
 
+    <!-- ServletContext ÅäÖÃ²ÎÊý -->
+    <context-param>
+        <param-name>application.name</param-name>
+        <param-value>user-web</param-value>
+    </context-param>
+
     <servlet>
         <servlet-name>default</servlet-name>
         <servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class>
