--- a/my-rest-client/pom.xml
+++ b/my-rest-client/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
 
     <artifactId>my-rest-client</artifactId>
-
+    <name>My REST Client Framework ${revision}</name>
 
     <dependencies>
 
