--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>my-configuration</module>
         <module>my-dependency-injection</module>
         <module>my-rest-client</module>
+        <module>my-reactive-messaging</module>
     </modules>
 
     <properties>
@@ -184,6 +185,12 @@
                 <groupId>org.eclipse.microprofile.rest.client</groupId>
                 <artifactId>microprofile-rest-client-api</artifactId>
                 <version>${microprofile-rest-client-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.eclipse.microprofile.reactive.messaging</groupId>
+                <artifactId>microprofile-reactive-messaging-api</artifactId>
+                <version>${microprofile-reactive-messaging-api.version}</version>
             </dependency>
 
             <dependency>
