--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>my-dependency-injection</module>
         <module>my-rest-client</module>
         <module>my-reactive-messaging</module>
+        <module>my-cache</module>
     </modules>
 
     <properties>
@@ -27,6 +28,10 @@
         <!-- Artifacts 依赖版本 -->
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
+        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <javax.inject.version>1</javax.inject.version>
+        <javax.cdi-api.version>2.0</javax.cdi-api.version>
+        <javax.cache-api.version>1.1.1</javax.cache-api.version>
         <jstl.version>1.2</jstl.version>
         <commons-lang.version>2.6</commons-lang.version>
         <commons-io.version>2.4</commons-io.version>
@@ -38,9 +43,8 @@
         <hibernate.validator.version>6.1.7.Final</hibernate.validator.version>
         <jackson.version>2.9.5</jackson.version>
         <activemq.version>5.9.1</activemq.version>
-        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
-        <javax.inject.version>1</javax.inject.version>
-        <javax.cdi-api.version>2.0</javax.cdi-api.version>
+        <lettuce.version>6.1.0.RELEASE</lettuce.version>
+        <jedis.version>3.5.2</jedis.version>
 
         <!-- MicroProfile 版本-->
         <microprofile-config-api.version>2.0</microprofile-config-api.version>
@@ -48,6 +52,9 @@
         <microprofile-reactive-messaging-api.version>1.0</microprofile-reactive-messaging-api.version>
 
         <spring.version>4.3.4.RELEASE</spring.version>
+
+        <!-- Spring 依赖版本 -->
+        <spring-boot.version>2.4.5</spring-boot.version>
 
         <!-- Testing 版本 -->
         <junit.version>4.13</junit.version>
@@ -68,6 +75,15 @@
 
 
         <dependencies>
+
+            <!-- Spring Boot Dependencies -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
             <dependency>
                 <groupId>org.geekbang.projects</groupId>
@@ -98,6 +114,14 @@
                 <artifactId>javax.ws.rs-api</artifactId>
                 <version>${javax.ws.rs-api.version}</version>
             </dependency>
+
+            <!-- Java Cache API -->
+            <dependency>
+                <groupId>javax.cache</groupId>
+                <artifactId>cache-api</artifactId>
+                <version>${javax.cache-api.version}</version>
+            </dependency>
+
 
             <!-- JSTL -->
             <dependency>
@@ -228,6 +252,19 @@
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-all</artifactId>
                 <version>${activemq.version}</version>
+            </dependency>
+
+            <!-- Redis Java Client - Lettuce -->
+            <dependency>
+                <groupId>io.lettuce</groupId>
+                <artifactId>lettuce-core</artifactId>
+                <version>${lettuce.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
             </dependency>
 
             <!-- JUnit -->
